--- a/modulo2/style.css
+++ b/modulo2/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-08";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Sriracha&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: rgb(158, 158, 158);
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +30,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -40,19 +53,41 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3vw;
+}
+
+.espaço {
+    padding-bottom: 2em;
 }
 
 section.normal {
     background-color: white;
 }
 
+#img1 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img2 {
+    background-image: url(imagens/background002.jpg);
+}
+
 section.imagem {
     background-color: rgb(70, 70, 70);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.479);
+    background-attachment: fixed;
+    
 }
 
 section.imagem > p {
-    background-color: rgb(63, 63, 63);
+    background-color: rgba(0, 0, 0, 0.250);
+    display: inline-block;
+    padding: 1vw;
+    margin: -10px;
+    text-shadow: 1px 1px 1px black;
 }
 
 footer {
